--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -26,7 +26,8 @@
 
 <link href="./css/chosen.css" rel="stylesheet">
 <link href="./css/bootstrap-datetimepicker.css" rel="stylesheet">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+<link rel="stylesheet"
+	href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
 <link href="./style.css" rel="stylesheet">
 <link href="./css/cluster-viz.css" rel="stylesheet">
 <link href="./css/sweetalert.css" rel="stylesheet">
@@ -110,9 +111,11 @@
 		src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 	<script src="./scripts/d3.v3.min.js"></script>
 	<script src="./scripts/sweetalert.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
-	
+	<script
+		src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+	<script
+		src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+
 	<script src="./scripts/chosen.jquery.min.js"></script>
 	<script src="./scripts/directives.js"></script>
 	<script src="./scripts/controllers.js"></script>
