--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,10 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <title>Kmanager-Chickling</title>
-  <link rel="stylesheet" href="https://bootswatch.com/simplex/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
 <link href="./css/chosen.css" rel="stylesheet">
 <link href="./css/bootstrap-datetimepicker.css" rel="stylesheet">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+<link rel="stylesheet" href="./css/morris.css">
 <link href="./style.css" rel="stylesheet">
 <link href="./css/cluster-viz.css" rel="stylesheet">
 <link href="./css/sweetalert.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 <script
 	src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-resource.js"></script>
 
-<script src="https://cdn.jsdelivr.net/lodash/4/lodash.min.js"></script>
+<script src="./scripts/jslodash.min.js"></script>
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
