--- a/src/main/resources/static/chartTopic.html
+++ b/src/main/resources/static/chartTopic.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kmanager chart -Chickling</title>
-    <script src="https://cdn.jsdelivr.net/lodash/4/lodash.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js" charset="utf-8"></script>
-    <script src="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.min.js"></script>
-    <link href="https://cdn.rawgit.com/novus/nvd3/v1.8.1/build/nv.d3.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="http://www.daterangepicker.com/moment.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="http://www.daterangepicker.com/daterangepicker.css" />
+    <script src="./scripts/js/lodash.min.js"></script>
+    <script src="./scripts/js/d3.min.js" charset="utf-8"></script>
+    <script src="./scripts/js/nv.d3.min.js"></script>
+    <link href="./css/nv.d3.css" rel="stylesheet" type="text/css">
 
-    <script src="http://www.daterangepicker.com/daterangepicker.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <script src="./scripts/js/jquery-1.11.3.min.js"></script>
+    <script src="./scripts/js/bootstrap.min.js"></script>
+    <script src="./scripts/js/moment.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/daterangepicker.css" />
+
+    <script src="./scripts/js/daterangepicker.js"></script>
     <style>
         .tooltipLegend {
             height: 15px;
@@ -160,7 +161,7 @@
             });
         }
         function renderChart(start, end) {
-            d3.json('http://localhost:8099/group/2/' + group + '/' + topic + '?start=' + start + '&end=' + end, function (d) {
+            d3.json('http://localhost:8099/group/' + group + '/' + topic + '?start=' + start + '&end=' + end, function (d) {
                 results = d;
                 var i = 0;
                 _.forOwn(results, function (val, key) {
