--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,7 +20,7 @@
 <script
 	src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-resource.js"></script>
 
-<script src="./scripts/jslodash.min.js"></script>
+<script src="./scripts/js/lodash.min.js"></script>
 
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
