readme and small fix

--- a/src/main/resources/static/chart.html
+++ b/src/main/resources/static/chart.html
@@ -34,7 +34,7 @@
     </div>
 
     <script>
-        var apiHost = 'http://localhost:8099';
+        var apiHost = '';
         function objectWithKeySorted(object) {
             var result = {};
             _.forEach(Object.keys(object).sort(), function (key) {
