--- a/src/main/resources/static/chartTopic.html
+++ b/src/main/resources/static/chartTopic.html
@@ -53,7 +53,7 @@
 
 
     <script type="text/javascript">
-        var apiHost = 'http://localhost:8099';
+        var apiHost = '';
         function getParameterByName(name, url) {
             if (!url) url = window.location.href;
             name = name.replace(/[\[\]]/g, "\\$&");
