google resource localization

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,11 +14,14 @@
 <link href="./css/cluster-viz.css" rel="stylesheet">
 <link href="./css/sweetalert.css" rel="stylesheet">
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.js"></script>
 <script
 	src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-route.js"></script>
 <script
-	src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-resource.js"></script>
+	src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular-resource.js"></script> -->
+<script src="./scripts/js/angular.js"></script>
+<script src="./scripts/js/angular-route.js"></script>
+<script src="./scripts/js/angular-resource.js"></script>
 
 <script src="./scripts/js/lodash.min.js"></script>
 
